methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:18: error: not found: value set
set(1, 6) 
^MethodsDogHouse:24: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:30: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:40: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:50: error: not found: value dogHouse
		dogHouse();		
                ^