methods.basics.MethodsDogHouse.scala.code

brushDown()

for(i <- 1 to 6)
{
  forward()
}

setPos(1, 6)

left()

for(i <- 1 to 6)
{
  forward()
}

set(1, 6)